--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <section>
+            <h1>The largest community of photo enthusiasts</h1>
+            <a href="">Join Today</a>
+        </section>
+    </div>
     <!-- main -->
     <main>
 
