update index html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <!-- header -->
     <header>
         <nav>
-            <a href=""><img src="./images/logo.svg" alt="Логотип компании">photo</a>
+            <a href="./index.html"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
             <ul>
                 <li><a href="">Features</a></li>
                 <li><a href="">Pricing</a></li>
                 <li><a href="">Community</a></li>
                 <li><a href="">Support</a></li>
+                <li><a href="./wireframens.html">wireframens</a></li>
             </ul>
             <ul>
                 <li><a href="">Log in</a></li>
@@ -93,10 +92,53 @@
                 <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
             </ul>
         </section>
+        <section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <div>
+                <a href="">Join Today</a>
+                <a href="">Contact us</a>
+            </div>
+        </section>
+        <section>
+            <h2>Snap photos and share like never before</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <ul>
+                <li>
+                    <h3>Sed ut perspiciatis</h3>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+                </li>
+                <li>
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </li>
+                <li>
+                    <h3>Nemo enim ipsam</h3>
+                    <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                </li>
+            </ul>
+            <img src="./images/icon1.svg" alt="" width="830">
+        </section>
     </main>
     <!-- footer -->
     <footer>
-
+        <ul>
+            <li><a href="">Mobile app</a></li>
+            <li><a href="">Community</a></li>
+            <li><a href="">Company</a></li>
+        </ul>
+        <a href="./index.html"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
+        <ul>
+            <li><a href="">Help desk</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Resources</a></li>
+        </ul>
+        <ul>
+            <li><a href="" aria-label="Facebook">Facebook</a></li>
+            <li><a href="" aria-label="Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Instagram">Instagram</a></li>
+            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+        <p>&copy; Photo, Inc. 2019. We love our users!</p>
     </footer>
 </body>
 </html>
