update index html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,43 @@
                     <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
                 </li>
             </ul>
-            <img src="./images/icon1.svg" alt="" width="830">
+            <img src="./images/icon1.svg" alt="" width="830" height="740">
+        </section>
+        <section>
+            <h2>Snap photos and share like never before</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <ul>
+                <li>
+                    <img src="./images/Rectangle1.svg" alt="" width="686" height="655">
+                    <h3>Sed ut perspiciatis</h3>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+                </li>
+                <li>
+                    <img src="./images/Rectangle1.svg" alt="" width="686" height="655">
+                    <h3>Lorem ipsum dolor<h3>
+                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </li>
+            </ul>
+            <div>
+                <h2>You’re in good company</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <ul>
+                    <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
+                    <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
+                    <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
+                    <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
+                    <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
+                    <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
+                </ul>
+                <ul>
+                    <li>
+                        <img src="./images/Rectangle1.svg" alt="" width="686" height="400">
+                        <h3>Sed ut perspiciatis unde omnis</h3>
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
+                        
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- footer -->
