--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photo</title>
 </head>
 <body>
     <!-- header -->
     <header>
         <nav>
-            <a href="./index.html"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
-            <ul>
+            <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
+            <ul class="site-nav list">
                 <li><a href="">Features</a></li>
                 <li><a href="">Pricing</a></li>
                 <li><a href="">Community</a></li>
                 <li><a href="">Support</a></li>
                 <li><a href="./wireframens.html">wireframens</a></li>
             </ul>
-            <ul>
+            <ul class="site-nav list">
                 <li><a href="">Log in</a></li>
                 <li><a href="">Register</a></li>
             </ul>
@@ -35,26 +35,22 @@
             <ul>
                 <li>
                     <h3>Sed ut perspiciatis</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
                     <a href="">Learn more</a>
                 </li>
                 <li>
                     <h3>Lorem ipsum dolor</h3>
-                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
                     <a href="">Learn more</a>
                 </li>
                 <li>
                     <h3>Nemo enim ipsam</h3>
-                    <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
+                    <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
                     <a href="">Learn more</a>
                 </li>
                 <li>
                     <h3>Tempor incididunt</h3>
-                    <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-                        sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
+                    <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
                     <a href="">Learn more</a>
                 </li>
             </ul>
@@ -65,16 +61,12 @@
                 <li>
                     <img src="./images/Rectangle.svg" alt="Зимний Сад" width="750">
                     <h3>Sed ut perspiciatis unde omnis</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-                    </p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
                 </li>
                 <li>
                     <img src="./images/Rectangle.svg" alt="Поле" width="750">
                     <h3>Sed ut perspiciatis unde omnis</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-                    </p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
                 </li>
             </ul>
         </section>
