--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Photo</title>
 </head>
@@ -32,7 +35,7 @@
         </section>
         <section class="section">
             <h2 class="section-title">Snap photos and share like<br>never before</h2>
-            <ul class="feature-list">
+            <ul class="feature-list list">
                 <li>
                     <h3 class="title">Sed ut perspiciatis</h3>
                     <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
@@ -57,7 +60,7 @@
         </section>
         <section class="section">
             <h2 class="section-title">Examples</h2>
-            <ul class="work-list">
+            <ul class="work-list list">
                 <li>
                     <img src="./images/Rectangle.svg" alt="Зимний Сад" width="750">
                     <h3 class="title">Sed ut perspiciatis unde omnis</h3>
@@ -72,8 +75,8 @@
         </section>
         <section class="section">
             <h2 class="section-title">You’re in good company</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <ul>
+            <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <ul class="list">
                 <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
                 <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
                 <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
@@ -85,7 +88,7 @@
             </ul>
         </section>
         <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
             <div>
                 <a href="" class="button primary">Join Today</a>
                 <a href="" class="button secondary">Contact us</a>
@@ -94,7 +97,7 @@
         <section>
             <h2>Snap photos and share like never before</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3>Sed ut perspiciatis</h3>
                     <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
@@ -113,7 +116,7 @@
         <section>
             <h2>Snap photos and share like never before</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/Rectangle1.svg" alt="" width="686" height="655">
                     <h3>Sed ut perspiciatis</h3>
@@ -128,7 +131,7 @@
             <div>
                 <h2>You’re in good company</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-                <ul>
+                <ul class="list">
                     <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
                     <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
                     <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
@@ -136,7 +139,7 @@
                     <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
                     <li><img src="./images/icon.svg" alt="" width="173" height="76"></li>
                 </ul>
-                <ul>
+                <ul class="list">
                     <li>
                         <img src="./images/Rectangle1.svg" alt="" width="686" height="400">
                         <h3>Sed ut perspiciatis unde omnis</h3>
@@ -149,18 +152,18 @@
     </main>
     <!-- footer -->
     <footer>
-        <ul>
+        <ul class="list">
             <li><a href="">Mobile app</a></li>
             <li><a href="">Community</a></li>
             <li><a href="">Company</a></li>
         </ul>
-        <a href="./index.html"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
-        <ul>
+        <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
+        <ul class="list">
             <li><a href="">Help desk</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Resources</a></li>
         </ul>
-        <ul>
+        <ul class="list">
             <li><a href="" aria-label="Facebook">Facebook</a></li>
             <li><a href="" aria-label="Twitter">Twitter</a></li>
             <li><a href="" aria-label="Instagram">Instagram</a></li>
