update index html

--- a/community.html
+++ b/community.html
@@ -20,6 +20,10 @@
             <li>Sed ut perspiciatis unde omnis iste natus error sit voluptate</li>
             <li>Sed ut perspiciatis unde omnis iste natus error sit voluptate</li>
         </ul>
+
+        <div class="box">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, laboriosam. Aliquid accusantium minus, nostrum sed perferendis ad sequi praesentium earum distinctio natus? Dolores, illum? Quam quia similique sequi animi enim?
+        </div>
     </article>
 </body>
 </html>
