update index html

--- a/community.html
+++ b/community.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
@@ -20,10 +21,6 @@
             <li>Sed ut perspiciatis unde omnis iste natus error sit voluptate</li>
             <li>Sed ut perspiciatis unde omnis iste natus error sit voluptate</li>
         </ul>
-
-        <div class="box">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, laboriosam. Aliquid accusantium minus, nostrum sed perferendis ad sequi praesentium earum distinctio natus? Dolores, illum? Quam quia similique sequi animi enim?
-        </div>
     </article>
 </body>
 </html>
