--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./style/style.css">
     <title>Photo</title>
 </head>
 <body>
     <!-- header -->
-    <header>
-        <nav>
-            <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
-            <ul class="site-nav list">
-                <li><a href="" class="link current">Features</a></li>
-                <li><a href="" class="link">Pricing</a></li>
-                <li><a href="./community.html" class="link">Community</a></li>
-                <li><a href="" class="link">Support</a></li>
-            </ul>
-            <ul class="auth-nav list">
-                <li><a href="" class="button primary">Log in</a></li>
-                <li><a href="" class="button secondary">Register</a></li>
-            </ul>
-        </nav>
+    <header class="page-header">
+            <nav class="container">
+                <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
+                <ul class="site-nav list">
+                    <li><a href="" class="link current">Features</a></li>
+                    <li><a href="" class="link">Pricing</a></li>
+                    <li><a href="./community.html" class="link">Community</a></li>
+                    <li><a href="" class="link">Support</a></li>
+                </ul>
+                <ul class="auth-nav list">
+                    <li><a href="" class="button secondary">Log in</a></li>
+                    <li><a href="" class="button primary">Register</a></li>
+                </ul>
+            </nav>
     </header>
     <!-- main -->
     <main>
@@ -34,29 +35,31 @@
             <a href="" class="button primary">Join Today</a>
         </section>
         <section class="section">
-            <h2 class="section-title">Snap photos and share like<br>never before</h2>
-            <ul class="feature-list list">
-                <li>
-                    <h3 class="title">Sed ut perspiciatis</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-                <li>
-                    <h3 class="title">Lorem ipsum dolor</h3>
-                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-                <li>
-                    <h3 class="title">Nemo enim ipsam</h3>
-                    <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-                <li>
-                    <h3 class="title">Tempor incididunt</h3>
-                    <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Snap photos and share like<br>never before</h2>
+                <ul class="feature-list list">
+                    <li>
+                        <h3 class="title">Sed ut perspiciatis</h3>
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+                        <a href="" class="button secondary">Learn more</a>
+                    </li>
+                    <li>
+                        <h3 class="title">Lorem ipsum dolor</h3>
+                        <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+                        <a href="" class="button secondary">Learn more</a>
+                    </li>
+                    <li>
+                        <h3 class="title">Nemo enim ipsam</h3>
+                        <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
+                        <a href="" class="button secondary">Learn more</a>
+                    </li>
+                    <li>
+                        <h3 class="title">Tempor incididunt</h3>
+                        <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
+                        <a href="" class="button secondary">Learn more</a>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section">
             <h2 class="section-title">Examples</h2>
