--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="section-title">Snap photos and share like<br>never before</h2>
+                <h2 class="section-title centered">Snap photos and share like<br>never before</h2>
                 <ul class="feature-list list">
                     <li>
                         <h3 class="title">Sed ut perspiciatis</h3>
@@ -61,43 +61,49 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
-            <h2 class="section-title">Examples</h2>
-            <ul class="work-list list">
-                <li>
-                    <img src="./images/Rectangle.svg" alt="Зимний Сад" width="750">
-                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
-                </li>
-                <li>
-                    <img src="./images/Rectangle.svg" alt="Поле" width="750">
-                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="section">
-            <h2 class="section-title">You’re in good company</h2>
-            <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <ul class="list">
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-            </ul>
-        </section>
-        <section>
-            <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <div>
-                <a href="" class="button primary">Join Today</a>
-                <a href="" class="button secondary">Contact us</a>
+        <section class="section no-padding">
+            <div class="container">
+                <h2 class="section-title ">Examples</h2>
+                <ul class="work-list list">
+                    <li class="item">
+                        <img src="./images/Rectangle.svg" alt="Зимний Сад" width="750">
+                        <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/Rectangle.svg" alt="Поле" width="750">
+                        <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                    </li>
+                </ul>
             </div>
         </section>
-        <section>
+        <section class="section">
+           <div class="container">
+                <h2 class="section-title centered">You’re in good company</h2>
+                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <ul class="list">
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                </ul>
+           </div>
+        </section>
+        <section class="section">
+           <div class="container">
+                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <div>
+                    <a href="" class="button primary">Join Today</a>
+                    <a href="" class="button secondary">Contact us</a>
+                </div>
+           </div>
+        </section>
+        <!-- <section>
             <h2>Snap photos and share like never before</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
             <ul class="list">
@@ -151,7 +157,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
     <!-- footer -->
     <footer>
