update index html

--- a/index.html
+++ b/index.html
@@ -194,5 +194,17 @@
         </ul>
         <p>&copy; Photo, Inc. 2019. We love our users!</p>
     </footer>
+    <ul class="list">
+        <li class="list-item icon-delivery">
+            <h2 class="title">Lorem ipsum dolor sit</h2>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia similique autem quasi at inventore asperiores! Esse neque ut possimus veritatis.</p>
+        </li>
+        <ul class="list">
+            <li class="list-item">
+                <h2 class="title">Lorem ipsum dolor sit</h2>
+                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia similique autem quasi at inventore asperiores! Esse neque ut possimus veritatis.</p>
+            </li>
+            <div class="link"></div>
+    </ul>
 </body>
 </html>
