--- a/index.html
+++ b/index.html
@@ -264,7 +264,11 @@
             <use href="./images/symbol-defs.svg#icon-facebook"></use>
         </svg>
     </div>
-
-   
+    <div class="backdrop">
+        <div class="modal">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit consequatur quis vel iusto? Neque eligendi deserunt placeat dolorum accusamus minima quas et, dolores aliquam, illum voluptatum fugit nesciunt dignissimos quibusdam.</p>
+            <button>Закрыть</button>
+        </div>
+    </div>
 </body>
 </html>
