--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Photo</title>
 </head>
 <body>
-    <!-- <div class="test-container">
+    <div class="test-container">
         <div class="flex-container">
             <div class="flex-element">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, eveniet odio porro provident quod itaque eaque perferendis vitae tenetur repellat voluptate corrupti rerum obcaecati labore in commodi pariatur consequuntur quo.</div>
             <div class="flex-element">Ab rem, molestias cumque mollitia tempore similique earum optio atque corporis ut incidunt, adipisci cupiditate. Aperiam architecto aut, excepturi voluptate dolores ut ducimus unde modi nihil consectetur facilis temporibus eum?</div>
@@ -21,7 +21,7 @@
             <div class="flex-element">Aliquam inventore sint nihil facilis commodi quod ab dolores, recusandae dolorem porro ducimus minus dolore ut modi veniam corporis. Esse magni rem ipsum maxime eius eaque! Excepturi nam culpa exercitationem!</div>
             <div class="flex-element">Culpa, debitis? Ea quo soluta enim quod corrupti tenetur ipsa eligendi. Adipisci aperiam magnam sequi qui id porro, earum ullam officiis veritatis odit eos rem doloremque inventore tenetur, mollitia incidunt.</div>
         </div>
-    </div> -->
+    </div>
     <!-- header -->
     <header class="page-header">
             <nav class="container main-nav">
